# UE5_MCP

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: python-lint.yml  python-tests.yml
docs/: architecture.md  installation.md  tools-reference.md
mcp_server/: pyproject.toml
mcp_server/src/ue5_mcp/: __main__.py  client.py  config.py  server.py
mcp_server/src/ue5_mcp/models/: requests.py  responses.py
mcp_server/src/ue5_mcp/tools/: actors.py  console.py  logs.py  pie.py  properties.py  screenshot.py  transforms.py
mcp_server/tests/: conftest.py
mcp_server/tests/tools/: test_actors.py  test_console.py  test_properties.py  test_transforms.py
plugin/UE5MCP/: UE5MCP.uplugin
plugin/UE5MCP/Source/UE5MCP/: UE5MCP.Build.cs
plugin/UE5MCP/Source/UE5MCP/Private/: UE5MCPModule.cpp  UE5MCPSettings.cpp
plugin/UE5MCP/Source/UE5MCP/Private/Handlers/: UE5MCPActorHandlers.cpp  UE5MCPActorHandlers.h  UE5MCPConsoleHandlers.cpp  UE5MCPConsoleHandlers.h  UE5MCPLogHandlers.cpp  UE5MCPLogHandlers.h  UE5MCPPIEHandlers.cpp  UE5MCPPIEHandlers.h  UE5MCPPropertyHandlers.cpp  UE5MCPPropertyHandlers.h  UE5MCPScreenshotHandlers.cpp  UE5MCPScreenshotHandlers.h  UE5MCPTransformHandlers.cpp  UE5MCPTransformHandlers.h
plugin/UE5MCP/Source/UE5MCP/Private/HttpServer/: UE5MCPHttpServer.cpp  UE5MCPHttpServer.h  UE5MCPResponseHelpers.h  UE5MCPRouteRegistrar.h
plugin/UE5MCP/Source/UE5MCP/Private/Logging/: UE5MCPLogCapture.cpp  UE5MCPLogCapture.h
plugin/UE5MCP/Source/UE5MCP/Public/: UE5MCPModule.h  UE5MCPSettings.h
(+2 files in other folders)
