[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ue5-mcp"
version = "0.1.0"
description = "MCP server giving AI models direct control over Unreal Engine 5 Editor"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ue5-mcp = "ue5_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ue5_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
